<resources>
    <string name="app_name">Judgement</string>
    <string name="speedypotato">SpeedyPotato</string>
    <string name="cards">Cards:</string>
    <string name="game">Game:</string>
    <string name="hands">Hands</string>
    <string name="hands_left">HL:</string>
    <string name="lose">Lose</string>
    <string name="name">Name</string>
    <string name="next_round">Next Round</string>
    <string name="player">Player</string>
    <string name="players">Players:</string>
    <string name="round">RNDS:</string>
    <string name="rounds">Rounds:</string>
    <string name="return_home">Return to Start Page</string>
    <string name="score">Score</string>
    <string name="start_game">Start Game</string>
    <string name="win">Win</string>
</resources>
